log/build_2024-06-23_14-49-04/my_py_pkg2/stderr.log
  File "/home/lucas/ros2_ws/install/my_py_pkg2/lib/python3.10/site-packages/my_py_pkg2/add_two_numbers.py", line 5
    import example_interfaces.srv import AddTwoInts
                                  ^^^^^^
SyntaxError: invalid syntax

